; ModuleID = '/home/carl/AnghaBench/linux/drivers/pinctrl/sirf/extr_pinctrl-sirf.c_sirfsoc_gpio_to_bank.c'
source_filename = "/home/carl/AnghaBench/linux/drivers/pinctrl/sirf/extr_pinctrl-sirf.c_sirfsoc_gpio_to_bank.c"
target datalayout = "e-m:e-p270:32:32-p271:32:32-p272:64:64-i64:64-f80:128-n8:16:32:64-S128"
target triple = "x86_64-unknown-linux-gnu"

%struct.sirfsoc_gpio_bank = type { i32 }
%struct.sirfsoc_gpio_chip = type { %struct.sirfsoc_gpio_bank* }

@SIRFSOC_GPIO_BANK_SIZE = common dso_local global i32 0, align 4
@llvm.used = appending global [1 x i8*] [i8* bitcast (%struct.sirfsoc_gpio_bank* (%struct.sirfsoc_gpio_chip*, i32)* @sirfsoc_gpio_to_bank to i8*)], section "llvm.metadata"

; Function Attrs: noinline nounwind optnone uwtable
define internal %struct.sirfsoc_gpio_bank* @sirfsoc_gpio_to_bank(%struct.sirfsoc_gpio_chip* %0, i32 %1) #0 {
  %3 = alloca %struct.sirfsoc_gpio_chip*, align 8
  %4 = alloca i32, align 4
  store %struct.sirfsoc_gpio_chip* %0, %struct.sirfsoc_gpio_chip** %3, align 8
  store i32 %1, i32* %4, align 4
  %5 = load %struct.sirfsoc_gpio_chip*, %struct.sirfsoc_gpio_chip** %3, align 8
  %6 = getelementptr inbounds %struct.sirfsoc_gpio_chip, %struct.sirfsoc_gpio_chip* %5, i32 0, i32 0
  %7 = load %struct.sirfsoc_gpio_bank*, %struct.sirfsoc_gpio_bank** %6, align 8
  %8 = load i32, i32* %4, align 4
  %9 = load i32, i32* @SIRFSOC_GPIO_BANK_SIZE, align 4
  %10 = udiv i32 %8, %9
  %11 = zext i32 %10 to i64
  %12 = getelementptr inbounds %struct.sirfsoc_gpio_bank, %struct.sirfsoc_gpio_bank* %7, i64 %11
  ret %struct.sirfsoc_gpio_bank* %12
}


!llvm.module.flags = !{!0}
!llvm.ident = !{!1}

!0 = !{i32 1, !"wchar_size", i32 4}
!1 = !{!"clang version 10.0.1 (https://github.com/wsmoses/llvm-project-tok c8e5003577614e72d6d18a216e6a09771e1fcce4)"}
